Core functionality implemented (+ unit tests)

--- a/Transactions.xcodeproj/xcshareddata/xcschemes/Transactions-macOS.xcscheme
+++ b/Transactions.xcodeproj/xcshareddata/xcschemes/Transactions-macOS.xcscheme
@@ -26,9 +26,29 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BA13646D1E85CB6F00A1CC07"
+               BuildableName = "TransactionsTests.xctest"
+               BlueprintName = "TransactionsTests-macOS"
+               ReferencedContainer = "container:Transactions.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "BA5EB1471E83A60F00DAEB37"
+            BuildableName = "Transactions.framework"
+            BlueprintName = "Transactions-macOS"
+            ReferencedContainer = "container:Transactions.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
